# wlvolctl

./: Cargo.toml
scripts/: launch-wlvolctl.sh
src/: audio.rs  lib.rs  main.rs  pipewire_cli.rs  pulseaudio_cli.rs  ui.rs  ui.rs.old
tests/: audio_test.rs  pipewire_test.rs  pulseaudio_test.rs
