[package]
name = "wlvolctl"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = "0.18.1"
gdk-pixbuf = "0.18"
glib = "0.21.4"
regex = "1.12.2"
once_cell = "1.21.3"
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11"   # optional, pairs with log for easy logging
rust-ini = "0.21"
shellexpand = "3.1"   # expand ~ in paths


